# almflowx

./: .gitignore  CNAME  _config.yml  pyproject.toml
_posts/: 2023-06-10-welcome-to-jekyll.markdown
docs/reqs/: Config.json  Makefile
docs/reqs/latex/: specification.tex
docs/reqs/requirements/: SYS-RS-1.req  SYS-RS-10.req  SYS-RS-11.req  SYS-RS-1101.req  SYS-RS-1102.req  SYS-RS-13.req  SYS-RS-2.req  SYS-RS-3.req  SYS-RS-4.req  SYS-RS-5.req  SYS-RS-6.req  SYS-RS-7.req  SYS-RS-8.req  SYS-RS-9.req
docs/reqs/topics/: ReqsDocument.tic
